# kpass-tools

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  NEWS  README  README-hacking  aclocal.m4  bootstrap  bootstrap.conf  config.h.in  configure  configure.ac
build-aux/: .gitignore
lib/: .gitignore  Makefile.am  Makefile.in  fseeko.c  iswblank.c  langinfo.in.h  wctype.in.h
m4/: .gitignore  gnulib-cache.m4  gnulib-comp.m4
src/: clkpass.c  copy.c  copy.h  entry.c  entry.h  kpmerge.c  list.c  list.h  main.c  merge.c  merge.h  util.c  util.h
test-data/: test2.kdb  test3.kdb
test-data/copy/: destination.kdb  expected_output.kdb  source.kdb  testcmd
test-data/entry/: test.kdb  testcmd
test-data/merge/: destination.kdb  expected_output.kdb  source.kdb  testcmd
